--- a/foxit_xamarin_ios/FoxitRDKDemo/FoxitRDKDemo/Resources/uiextensions_config.json
+++ b/foxit_xamarin_ios/FoxitRDKDemo/FoxitRDKDemo/Resources/uiextensions_config.json
@@ -32,6 +32,7 @@
         "thumbnail": true,
         "attachment": true,
         "signature": true,
+        "fillSign": true,
         "search": true,
         "navigation": true,
         "form": true,
