--- a/foxit_xamarin_android/Microsoft_Aad_Adal/Microsoft_Aad_Adal/Microsoft_Aad_Adal.csproj
+++ b/foxit_xamarin_android/Microsoft_Aad_Adal/Microsoft_Aad_Adal/Microsoft_Aad_Adal.csproj
@@ -17,7 +17,7 @@
     <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
     <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
     <AndroidClassParser>class-parse</AndroidClassParser>
-    <AndroidCodegenTarget>XAJavaInterop1</AndroidCodegenTarget>
+    <AndroidCodegenTarget>XamarinAndroid</AndroidCodegenTarget>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
     <AndroidSdkBuildToolsVersion>28.0.3</AndroidSdkBuildToolsVersion>
   </PropertyGroup>
