--- a/foxit_xamarin_android/complete_pdf_viewer/complete_pdf_viewer/Properties/AndroidManifest.xml
+++ b/foxit_xamarin_android/complete_pdf_viewer/complete_pdf_viewer/Properties/AndroidManifest.xml
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.foxit.pdf.viewer" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="28" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
+          android:versionCode="1" 
+          android:versionName="1.0" 
+          package="com.foxit.pdf.viewer" 
+          android:installLocation="auto"    
+          xmlns:tools="http://schemas.android.com/tools">
+  
+	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="29" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.USE_CREDENTIALS" />
@@ -14,5 +20,14 @@
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.RECORD_AUDIO" />
 	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-	<application name="Com.Foxit.MyApplication" android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:roundIcon="@mipmap/ic_launcher_round" android:supportsRtl="true" android:theme="@style/AppTheme" android:label="@string/app_name"></application>
+  
+	<application name="Com.Foxit.MyApplication"
+               android:allowBackup="true"
+               android:icon="@mipmap/ic_launcher" 
+               android:roundIcon="@mipmap/ic_launcher_round" 
+               android:supportsRtl="true"  
+               tools:replace="android:theme" 
+               android:theme="@style/AppTheme" 
+               android:label="@string/app_name">
+  </application>
 </manifest>
