--- a/foxit_xamarin_android/complete_pdf_viewer/complete_pdf_viewer/Properties/AndroidManifest.xml
+++ b/foxit_xamarin_android/complete_pdf_viewer/complete_pdf_viewer/Properties/AndroidManifest.xml
@@ -6,20 +6,27 @@
           android:installLocation="auto"    
           xmlns:tools="http://schemas.android.com/tools">
   
-	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="29" />
+	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="30" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.USE_CREDENTIALS" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.RUN_INSTRUMENTATION" />
 	<uses-permission android:name="com.android.email.permission.READ_ATTACHMENT" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.RECORD_AUDIO" />
 	<uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
+    <queries>
+      <intent>
+        <action android:name="android.intent.action.TTS_SERVICE" />
+      </intent>
+    </queries>
   
 	<application name="Com.Foxit.MyApplication"
                android:allowBackup="true"
@@ -28,6 +35,8 @@
                android:supportsRtl="true"  
                tools:replace="android:theme" 
                android:theme="@style/AppTheme" 
+               android:requestLegacyExternalStorage="true"
+               android:preserveLegacyExternalStorage="true"
                android:label="@string/app_name">
   </application>
 </manifest>
